--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "eslint": "^7.32.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "2.0.12"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
